@@ -7,7 +7,6 @@ import java.net.URI;
 import java.net.URLConnection;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.nio.file.spi.FileTypeDetector;
 import java.util.Collections;
@@ -136,7 +135,7 @@ public class CustomMimeTypesFileTypeDetector extends FileTypeDetector {
     }
 
     public String probeContentType(String path) {
-        return probeContentType(Paths.get(path));
+        return probeContentType(Path.of(path));
     }
 
     /**
@@ -149,7 +148,7 @@ public class CustomMimeTypesFileTypeDetector extends FileTypeDetector {
      */
     public String probeContentType(URI uri) {
         // First let's try to guess via the Path
-        Path path = Paths.get(uri.getPath());
+        Path path = Path.of(uri.getPath());
         String mimeTypeFromPath = probeContentType(path);
         if (mimeTypeFromPath != null) {
             return mimeTypeFromPath;
