@@ -1,5 +1,6 @@
 package dev.langchain4j.store.embedding.qdrant;
 
+import static dev.langchain4j.internal.Utils.isNullOrEmpty;
 import static dev.langchain4j.internal.Utils.randomUUID;
 import static io.qdrant.client.PointIdFactory.id;
 import static io.qdrant.client.ValueFactory.value;
@@ -19,13 +20,18 @@ import io.qdrant.client.QdrantClient;
 import io.qdrant.client.QdrantGrpcClient;
 import io.qdrant.client.WithVectorsSelectorFactory;
 import io.qdrant.client.grpc.JsonWithInt.Value;
+import io.qdrant.client.grpc.Points;
 import io.qdrant.client.grpc.Points.DeletePoints;
 import io.qdrant.client.grpc.Points.Filter;
 import io.qdrant.client.grpc.Points.PointStruct;
 import io.qdrant.client.grpc.Points.PointsSelector;
 import io.qdrant.client.grpc.Points.ScoredPoint;
 import io.qdrant.client.grpc.Points.SearchPoints;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -40,6 +46,8 @@ import javax.annotation.Nullable;
  * support for storing {@link dev.langchain4j.data.document.Metadata}.
  */
 public class QdrantEmbeddingStore implements EmbeddingStore<TextSegment> {
+    private static final Logger log = LoggerFactory.getLogger(QdrantEmbeddingStore.class);
+
 
   private final QdrantClient client;
   private final String payloadTextKey;
@@ -107,33 +115,27 @@ public class QdrantEmbeddingStore implements EmbeddingStore<TextSegment> {
   @Override
   public List<String> addAll(List<Embedding> embeddings) {
 
-    List<String> ids = embeddings.stream().map(ignored -> randomUUID()).collect(toList());
+    List<String> ids = embeddings.stream().map(ignored -> randomUUID()).toList();
 
-    addAllInternal(ids, embeddings, null);
-
-    return ids;
-  }
-
-  @Override
-  public List<String> addAll(List<Embedding> embeddings, List<TextSegment> textSegments) {
-
-    List<String> ids = embeddings.stream().map(ignored -> randomUUID()).collect(toList());
-
-    addAllInternal(ids, embeddings, textSegments);
+    addAll(ids, embeddings, null);
 
     return ids;
   }
 
   private void addInternal(String id, Embedding embedding, TextSegment textSegment) {
-    addAllInternal(
+    addAll(
         singletonList(id),
         singletonList(embedding),
         textSegment == null ? null : singletonList(textSegment));
   }
 
-  private void addAllInternal(
+  @Override
+  public void addAll(
       List<String> ids, List<Embedding> embeddings, List<TextSegment> textSegments) throws RuntimeException {
-
+    if (isNullOrEmpty(ids) || isNullOrEmpty(embeddings)) {
+         log.info("Empty embeddings - no ops");
+         return;
+    }
     try {
       List<PointStruct> points = new ArrayList<>(embeddings.size());
 
@@ -166,6 +168,66 @@ public class QdrantEmbeddingStore implements EmbeddingStore<TextSegment> {
     }
   }
 
+  @Override
+  public void remove(String id) {
+      if (id == null || id.isBlank()) {
+          throw new IllegalArgumentException("id cannot be null or blank");
+      }
+      removeAll(Collections.singleton(id));
+  }
+
+  @Override
+  public void removeAll(Collection<String> ids) {
+      if (ids == null || ids.isEmpty()) {
+          throw new IllegalArgumentException("ids cannot be null or empty");
+      }
+      try {
+
+          Points.PointsIdsList pointsIdsList = Points.PointsIdsList.newBuilder()
+                  .addAllIds(ids.stream().map(id -> id(UUID.fromString(id))).toList())
+                  .build();
+          PointsSelector pointsSelector = PointsSelector.newBuilder().setPoints(pointsIdsList).build();
+
+          client
+                  .deleteAsync(
+                          DeletePoints.newBuilder()
+                                  .setCollectionName(collectionName)
+                                  .setPoints(pointsSelector)
+                                  .build())
+                  .get();
+      } catch (InterruptedException | ExecutionException e) {
+          throw new RuntimeException(e);
+      }
+  }
+
+  @Override
+  public void removeAll(dev.langchain4j.store.embedding.filter.Filter filter) {
+      if (filter == null) {
+          throw new IllegalArgumentException("filter cannot be null");
+      }
+      try {
+
+          Filter qdrantFilter = QdrantFilterConverter.convertExpression(filter);
+          PointsSelector pointsSelector = PointsSelector.newBuilder().setFilter(qdrantFilter).build();
+
+          client
+                  .deleteAsync(
+                          DeletePoints.newBuilder()
+                                  .setCollectionName(collectionName)
+                                  .setPoints(pointsSelector)
+                                  .build())
+                  .get();
+      } catch (InterruptedException | ExecutionException e) {
+          throw new RuntimeException(e);
+      }
+  }
+
+  @Override
+  public void removeAll() {
+      clearStore();
+  }
+
+  @Override
   public EmbeddingSearchResult<TextSegment> search(EmbeddingSearchRequest request) {
 
     SearchPoints.Builder searchBuilder = SearchPoints.newBuilder()
@@ -189,7 +251,7 @@ public class QdrantEmbeddingStore implements EmbeddingStore<TextSegment> {
     }
 
     if (results.isEmpty()) {
-      return new EmbeddingSearchResult<TextSegment>(emptyList());
+      return new EmbeddingSearchResult<>(emptyList());
     }
 
     List<EmbeddingMatch<TextSegment>> matches = results.stream()
@@ -200,7 +262,7 @@ public class QdrantEmbeddingStore implements EmbeddingStore<TextSegment> {
 
     Collections.reverse(matches);
 
-    return new EmbeddingSearchResult<TextSegment>(matches);
+    return new EmbeddingSearchResult<>(matches);
   }
 
   @Override
